--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,16 @@
 ---
-layout: post_page
+layout: default
 ---
-<div class="post">
+<div class="post-ribbon"></div>
 
-  <header class="post-header">
-    <h1 data-sr="enter bottom" class="post-title">{{ page.title }}</h1>
-  </header>
+<div class="container page-container">
+  <div class="post-page card-panel z-depth-2">
+    <div class="post-section">
+      <div class="post-header">
+        <h1 class="post-title">{{ page.title }}</h1>
+      </div>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+      <article class="post-content">{{ content }}</article>
+    </div>
+  </div>
 </div>
