--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,10 +4,10 @@
       
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="{{ '/' | prepend: site.baseurl }}" class="white-text">
-            <i class="mdi mdi-home left indigo-text text-lighten-3"></i>Home
+            <i class="mdi mdi-home left indigo-text text-lighten-3"></i>首页
         </a></li>
         <li><a href="{{ '/about' | prepend: site.baseurl }}" class="white-text">
-            <i class="mdi mdi-account-circle left indigo-text text-lighten-3"></i>About
+            <i class="mdi mdi-account-circle left indigo-text text-lighten-3"></i>关于
         </a></li>
         <li><a href="{{ '/category' | prepend: site.baseurl }}" class="white-text">
             <i class="mdi mdi-folder-multiple left indigo-text text-lighten-3"></i>Category
