--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
         <div class="nav-content">
           <ul class="tabs tabs-transparent">
             <li class="tab"><a class="active" href="#tab-main">article</a></li>
-          {% for t in site.data.tabs %}
+          <!-- {% for t in site.data.tabs %}
             <li class="tab {% if t.disabled %}disabled{% endif %}"><a href="#{{ t.id }}">{{ t.name }}</a></li>
-          {% endfor %}
+          {% endfor %} -->
           </ul>
         </div>
       </nav>
