--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,8 @@
     -
   {% endunless %}
   {{ current }}
+    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=481535492&auto=1&height=66">
+    </iframe>
   </section>
   <section>Powered by <a href="//jekyllrb.com">Jekyll</a> | <a href="https://github.com/kaeyleo/jekyll-theme-H2O">Theme H2O</a></section>
 </footer>
